[package]
name = "simplex_method"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "simplex_method"
path = "src/simplex_method.rs"

[[bin]]
name = "bulldozer_method"
path = "src/bulldozer_method.rs"

[dependencies]
ndarray = "0.14"
ndarray-linalg = { version = "0.13", features = ["openblas"] }